[project]
name = "forlac"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "cluster-utils>=3.0.0",
    "distrax>=0.1.7",
    "ipdb>=0.13.13",
    "jax[cuda]>=0.9.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "oetils>=0.2.11",
    "playground>=0.2.0",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
    "wandb>=0.25.1",
]
